# docs/swagger.yaml
@@ -1,5 +1,7 @@
 info:
   contact: {}
+host:
+  localhost:8080
 paths:
   /addressbook/show:
     get:
@@ -126,6 +128,22 @@ paths:
       summary: Creates a transaction with a text message
       tags:
       - transactions
+  /upload/media:
+    get:
+      description: This endpoint serves an HTML form for users to upload media files.
+      operationId: UploadMedia
+      responses:
+        "200":
+          description: HTML form successfully served
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      summary: Serves an HTML form for uploading media.
+      tags:
+      - media
   /user/create:
     post:
       description: Endpoint to create a new user with the provided public key, nickname,
@@ -227,4 +245,3 @@ paths:
       tags:
       - users
 swagger: "2.0"
-host: localhost:8080
